<?xml version="1.0"?>
<package>
  <name>fr01_ndt_mapping</name>
  <version>0.1.0</version>
  <description>The fr01_ndt_mapping package</description>
  <maintainer email="k104009y@mail.kyutech.jp">Arita Yuta</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>


</package>
